# framaschedule

./: Cargo.toml  README.md  Rocket.toml  doodle-xls-2-csv.sh  test.csv
res/test/: test_impossible.csv  test_nextcloud.csv  test_poll.csv
src/: data.rs  doodle.rs  framadate.rs  lib.rs  main.rs  nextcloud.rs  scheduling.rs
tests/: integration.rs
