[package]
name = "framaschedule"
version = "0.2.0"
authors = ["Bennett Piater <bennett@piater.name>"]
edition = "2018"

[dependencies]
# import
csv = "1.1.1"
simple-error = "0.2.1"
scan_fmt = "0.2.4"

# CLI
clap = "2.33.0"

# parallelization
scoped_threadpool = "0.1.9"
num_cpus = "1.11.1"

# web
rand = "0.7.2"
rocket = "0.4.2"
rocket_contrib = {version = "0.4.2", default-features = false, features = ["json"]}
rocket_cors = "0.5.1"
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.44"
