[package]
name = "framaschedule"
version = "0.2.0"
authors = ["Bennett Piater <bennett@piater.name>"]
edition = "2018"

[dependencies]
# import
csv = "1.1.6"
simple-error = "0.2.3"
scan_fmt = "0.2.6"

# CLI
clap = "2.33.0"

# parallelization
scoped_threadpool = "0.1.9"
num_cpus = "1.13.1"

# web
rand = "0.8.4"
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", default-features = false, features = ["json"] }
rocket_cors = "0.5.2"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
